--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Rahulkapil by rahulkapil</title>
+    <title>Rahulkapil.com </title>
   </head>
 
   <body>
@@ -18,15 +18,10 @@
       <div class="inner">
 
         <header>
-          <h1>Rahulkapil</h1>
+          <h1>Rahul Kapil</h1>
           <h2></h2>
         </header>
 
-        <section id="downloads" class="clearfix">
-          <a href="https://github.com/rahulkapil/rahulkapil/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/rahulkapil/rahulkapil/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/rahulkapil/rahulkapil" id="view-on-github" class="button"><span>View on GitHub</span></a>
-        </section>
 
         <hr>
 
